# space

./: .gitignore  .gitmodules  CMakeLists.txt  space.dpx
data/: sprites.json  templates.json  textures.json
imgui/: imconfig.h
src/: actionutil.cpp  actionutil.hpp  actor.hpp  ai.hpp  airlockmode.hpp  aiutil.cpp  aiutil.hpp  allowunbreathable.hpp  atmosphereutil.cpp  atmosphereutil.hpp  debug.cpp  debug.hpp  debugging.cpp  debugging.hpp  debuggui.cpp  debuggui.hpp  debugguidata.cpp  debugguidata.hpp  debugio.hpp  debugrenderer.cpp  debugrenderer.hpp  doorutil.cpp  doorutil.hpp  extragamedata.hpp  gamecontroller.cpp  gamecontroller.hpp  gameinterface.cpp  gameinterface.hpp  gases.cpp  gases.hpp  glm.hpp  gridneighbors.hpp  humanai.cpp  humanai.hpp  imguiutil.cpp  imguiutil.hpp  incentiveutil.cpp  incentiveutil.hpp  inputhandler.cpp  inputhandler.hpp  (+51 more)
src/data/: accesspattern.hpp  clear.hpp  common.hpp  data.hpp  erase.cpp  erase.hpp  find.hpp  foreach.hpp  get.hpp  has.hpp  insert.cpp  insert.hpp  join.hpp  memory.hpp  metrics.hpp  set.hpp  sort.cpp  sort.hpp
src/drawables/: imguidrawable.cpp  imguidrawable.hpp  line.cpp  line.hpp  linerect.cpp  linerect.hpp
src/logic/: actionlogic.cpp  actionlogic.hpp  actorlogic.cpp  actorlogic.hpp  atmospherelogic.cpp  atmospherelogic.hpp  decisionailogic.cpp  decisionailogic.hpp  interfacelogic.cpp  interfacelogic.hpp  move.cpp  move.hpp  organismlogic.cpp  organismlogic.hpp  physics.cpp  physics.hpp  renderlogic.cpp  renderlogic.hpp  structurelogic.cpp  structurelogic.hpp  tasklogic.cpp  tasklogic.hpp  zonelogic.cpp  zonelogic.hpp
src/structures/: airlock.cpp  airlock.hpp
src/util/: accelerator.cpp  accelerator.hpp  grid.hpp  numberpool.hpp
templates/: gamedata.dpt
